--- a/security/src/main/resources/application.properties
+++ b/security/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 server.port=8083
 spring.jpa.hibernate.ddl-auto=update
 #spring.security.user.password=Sena!123
+#security.secret=Spr!ngSecur!tyP@r@M!73TopC@re
